<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainroot"
    android:background="@drawable/cloudy"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:id="@+id/editCity"
                android:hint="@string/searchhint"
                android:textColor="#F1072A"
                android:textColorHint="#F1072A"
                />
            <Button
                android:id="@+id/btnSearch"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_search_black_24dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView

                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/temperature"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/temp"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/temp_val"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/pressure"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/pressure"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/press_val"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/wind_speed"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/wind"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/wind_val"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="110dp">
            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/weather"
                android:textColor="#FDFDFD"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/weather"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/mostly_cloudy"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/currentLoc"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/latitude"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/sunrise"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/lat_val"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/longitude"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/sunset"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/long_val"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"
                />

        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>